--- a/package.json
+++ b/package.json
@@ -1,13 +1,22 @@
 {
-  "name": "app",
-  "version": "0.1.0",
+  "name": "",
+  "version": "1.0.0",
   "private": true,
+  "description": "",
+  "author": {
+    "name": ""
+  },
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "server": "json-server db.json",
+    "client": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
+  "main": "index.js",
   "dependencies": {
+    "axios": "^1.2.2",
+    "element-ui": "^2.15.12",
+    "json-server": "^0.14.2",
     "vue": "^2.6.14",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2"
@@ -16,7 +25,9 @@
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-typescript": "~5.0.0",
+    "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "@vue/eslint-config-typescript": "^9.1.0",
     "eslint": "^7.32.0",
@@ -28,5 +39,12 @@
     "sass-loader": "^12.0.0",
     "typescript": "~4.5.5",
     "vue-template-compiler": "^2.6.14"
+  },
+  "_id": "",
+  "license": "MIT",
+  "readme": "ERROR: No README data found!",
+  "repository": {
+    "type": "git",
+    "url": ""
   }
 }
